--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,7 +16,7 @@ html{
 	font:14px/1.3 'Lato', sans-serif;
 }
 body{
-	min-height: 880px;
+	min-height: 840px;
     padding: 0;
 }
 /*----------------------------
@@ -75,7 +75,7 @@ footer a:hover {
 	text-decoration: underline;
 }
 img {
-	margin: 0 auto;
+	margin: 50px auto 0 auto;
 	display: block;
 }
 .links a {
